--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 @import "modules/_nav";
 @import "modules/_footer";
 @import "modules/_loginComponent";
+@import "modules/_allUsers";
+
 
 .hidden{
     display: none;
@@ -9,6 +11,7 @@
 
 body{
     background-color: $background_color;
+    // background-color: #ffffff;
 }
 
 @import url("https://use.typekit.net/itk1gfw.css");
