finished log in

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,8 @@
 }
 
 body{
-    background-color: $background_color;
+    // background-color: $background_color;
+    background-color: #ffffff;
 }
 
 @import url("https://use.typekit.net/itk1gfw.css");
