added kids profile

--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -50,6 +50,10 @@ header{
             width: 30px;
             padding: 10px 10px 10px;
           }
+
+          #avatarSmall{
+            max-width: 40px;
+          }
         }
     }
     
