--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -44,16 +44,19 @@ header{
 
         #userCon{
           margin-left: auto;
-          width: 150px;
+          cursor: pointer;
 
-          #logButton{
-            max-width: 40px;
-            margin-left: a;
-            // padding: 10px 10px 10px;
-          }
+          .navButton{
+            max-width: 45px;
+            width: 100%;
+            height: 45px;
+            margin-right: 5px;
 
-          #avatarSmall{
-            max-width: 40px;
+            transition: transform .3s;
+
+            &:hover{
+                transform: scale(1.08);
+            }
           }
         }
     }
