updated kids and adults profiles UI

--- a/sass/modules/_Users.scss
+++ b/sass/modules/_Users.scss
@@ -5,9 +5,10 @@
     padding-top: 100px;
     padding-bottom: 40px;
     margin-bottom: 40px;
+    border-radius: 5px;
 
     h2{
-        font-size: 28px;
+        font-size: 35px;
         color: #ffffff;
         font-family: $main-font;
         font-weight: 400;
