--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,10 @@
 @import "modules/_nav";
 @import "modules/_footer";
 @import "modules/_loginComponent";
-@import "modules/_Users";
+@import "modules/_users";
 @import "modules/_manageUsers";
+@import "modules/_profiles";
+
 
 
 
