--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -45,13 +45,13 @@ header{
         #userCon{
           margin-left: auto;
           cursor: pointer;
+          display: flex;
 
           .navButton{
-            max-width: 45px;
-            width: 100%;
+            width: 45px;
             height: 45px;
-            margin-right: 5px;
-
+            margin-right: 8px;
+            cursor: pointer;
             transition: transform .3s;
 
             &:hover{
