--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -2,6 +2,7 @@ footer{
     background-color: #252941;
     margin-top: 0;
     padding: 1px;
+    animation: fadeAnim 1s 1 0s ease;
 
     #footerCon{
         max-width: 1200px;
