--- a/sass/modules/_player.scss
+++ b/sass/modules/_player.scss
@@ -2,6 +2,7 @@
     background-color: #252941;
     padding-top: 40px;
     padding-bottom: 80px;
+    animation: fadeAnim 1s 1 0s ease;
 
     .player{
         max-width: 1200px;
