--- a/sass/modules/_profiles.scss
+++ b/sass/modules/_profiles.scss
@@ -14,6 +14,7 @@
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 20px;
+    animation: fadeAnim 1s 1 0s ease;
 
     .heroImage{
         // max-width: 1400px;
@@ -28,6 +29,7 @@
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 24px;
+    animation: fadeAnim 1s 1 0s ease;
 
     .filterButton{
         width: 100%;
@@ -57,11 +59,13 @@
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
 
     .mediaItem{
+        animation: fadeAnim 1s 1 0s ease;
         .thumbnail{
             max-width: 300px;
             width: 100%;
             cursor: pointer;
             transition: transform .3s;
+            animation: fadeAnim 1.7s 1 0s ease;
 
             &:hover{
                 transform: scale(1.03);
@@ -70,6 +74,7 @@
         }
     }
 }
+
 
 
 @media screen and (min-width: 700px){
