--- a/sass/modules/_loginComponent.scss
+++ b/sass/modules/_loginComponent.scss
@@ -5,7 +5,7 @@
 
 
     #login{
-        background-color: #12162e;
+        background-color: #252941;
         height: 400px;
         max-width: 300px;
         margin: 0 auto;
@@ -13,6 +13,8 @@
         // padding-bottom: 150px;
         padding-left: 30px;
         padding-right: 30px;
+        border-radius: 5px;
+
     h2{
         font-size: 35px;
         color: #ffffff;
@@ -63,7 +65,7 @@
             margin-top: 40px;
             width: 100%;
             height: 40px;
-            background-color: #252941;
+            background-color: #4a2b6b;
             border: none;
             border-radius: 2px;
             font-size: 20px;
